--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -713,7 +713,7 @@ html, body {
     .slick-arrow {
         position: absolute;
         top: 40%;
-        margin: 30px 0px 0px 0px;
+        margin: 30px 9px 0px 9px;
         z-index: 10;
         font-size: 0;
         width: 30px;
@@ -902,7 +902,7 @@ html, body {
         grid-template-columns: minmax(24px, 1fr) minmax(auto, 529px) minmax(24px, 1fr);
         grid-template-areas:
             ". diets__subtitle ."
-            ". diets__slider diets__slider";
+            "diets__slider diets__slider diets__slider";
     }
 
     .diets__text {
@@ -930,12 +930,11 @@ html, body {
 
     .diets__item {
         transition: all 0.3s ease 0.3s;
-        opacity: 0.4;
+        opacity: 0.2;
     }
 
     .diets__item.slick-center {
         opacity: 1;
-        margin-left: -47px;
     }
 }
 
@@ -1193,12 +1192,12 @@ html, body {
     margin-bottom: 22px;
 }
 
+/* - Типографика ------------------------------------------- */
 .image__heart {
     padding-top: 4px;
     padding-bottom: 4px;
 }
 
-/* - Типографика ------------------------------------------- */
 .delivery__subtitle {
     padding-bottom: 60px;
 }
@@ -1228,53 +1227,51 @@ html, body {
 }
 
 .spoiler__minisubtitle {
-    line-height: 140%;
-}
-
-.spoiler__minisubtitle {
     position: relative;
-    padding: 0px 0px 0px 30px;
-    cursor: pointer;
-}
-
-.spoiler__minisubtitle::before {
-    transform: rotate(40deg);
-    left:0;
-}
-
-.spoiler__minisubtitle::after {
-    transform: rotate(-40deg);
-    left:6.5px;
 }
 
 .spoiler__minisubtitle::before,
 .spoiler__minisubtitle::after {
     content: '';
-    width: 10px;
+    width: 20px;
     height: 2px;
     background-color: #8B1A12;
     position: absolute;
-    top: 45px;
+    right: 10px;
+    top: 40px;
     transition: all 0.3s ease 0s;
 }
 
-.spoiler__minisubtitle.active:before,
-.spoiler__minisubtitle.active:after {
-    background-color: #8B1A12;
-}
-
 .spoiler__minisubtitle.active:before {
-    transform: rotate(-40deg);
+    transform: rotate(-90deg);
 }
 
 .spoiler__minisubtitle.active:after {
-    transform: rotate(40deg);
+    transform: rotate(0deg);
 }
 
 .spoiler__text {
+    margin: 0px;
     display: none;
 }
 
+/* - Типографика ------------------------------------------- */
+.spoiler__item:not(:last-of-type) {
+    border-bottom: solid 1px #E5E5E5;
+    padding-bottom: 24px;
+}
+
+.spoiler__minisubtitle {
+    line-height: 140%;
+    padding: 24px 44px 0px 0px;
+    cursor: pointer;
+}
+
+.spoiler__text {
+    padding: 12px 44px 0px 0px;
+}
+
+/* - Медиазапросы ------------------------------------------ */
 @media screen and (max-width: 835px) {
     .faq {
         grid-area: faq;
@@ -1289,15 +1286,6 @@ html, body {
     .faq__subtitle {
         padding-bottom: 8px;
     }
-}
-
-/* - Типографика ------------------------------------------- */
-.spoiler__minisubtitle {
-    padding-top: 32px;
-}
-.spoiler__text {
-    padding-top: 12px;
-    margin: 0px;
 }
 
 /* = CONTACTS ================================================= */
